--- a/app/globals.css
+++ b/app/globals.css
@@ -180,6 +180,9 @@ body {
 .regis .ant-select-single{
     height: auto;
 }
+.produkOwner .ant-select-single{
+    height: max-content;
+}
 .regis .ant-input:hover, .regis .ant-input:focus{
     @apply border-primary;
 }
@@ -290,7 +293,7 @@ button, [type='button']{
 }
 
 .ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload-list.ant-upload-list-picture-card .ant-upload-list-item-container{
-    width: 156px;
+    width: 105px;
 }
 .create-produk .ant-input-affix-wrapper,.textarea-produk .ant-input-affix-wrapper, .ant-select:not(.ant-select-customize-input) .ant-select-selector{
     border-radius: 10px;
@@ -310,6 +313,10 @@ textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input{
 .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
     padding: 10px;
     height: max-content;
+}
+.produkOwner .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+    padding: 10px;
+    height: -webkit-fill-available;
 }
 .create-produk .ant-select .ant-select-arrow, .textarea-produk .ant-select .ant-select-arrow {
     height: 100%;
