--- a/app/globals.css
+++ b/app/globals.css
@@ -4,442 +4,468 @@
 
 /* Custom scrollbar */
 ::-webkit-scrollbar {
-	width: 6px;
+  width: 6px;
 }
 ::-webkit-scrollbar-thumb {
-	background-color: #4065da;
-	border-radius: 6px;
+  background-color: #4065da;
+  border-radius: 6px;
 }
 /* Chrome */
 ::-webkit-scrollbar-track {
-	background-color: #f0f0f0;
+  background-color: #f0f0f0;
 }
 /* Firefox */
 * {
-	scrollbar-color: #4065da #f0f0f0;
+  scrollbar-color: #4065da #f0f0f0;
 }
 .ant-menu-inline .ant-menu-item {
-	height: 50px;
+  height: 50px;
 }
 .sidebar .ant-menu-item-group-title {
-	@apply text-slate-500 p-2 text-2xl;
+  @apply text-slate-500 p-2 text-2xl;
 }
 .sidebar .ant-menu-title-content {
-	@apply text-lg font-bold text-slate-600 flex justify-center;
+  @apply text-lg font-bold text-slate-600 flex justify-center;
 }
 
 .sidebar .ant-menu-item:hover {
-	background-color: #60a5fa !important;
+  background-color: #60a5fa !important;
 }
 .sidebar .ant-menu-item .ant-menu-title-content:hover {
-	color: white !important;
+  color: white !important;
 }
 .sidebar .ant-menu-item.ant-menu-item-selected {
-	background-color: #4065da !important;
+  background-color: #4065da !important;
 }
 .sidebar .ant-menu-item.ant-menu-item-selected .ant-menu-title-content {
-	color: white !important;
+  color: white !important;
 }
 
 @font-face {
-	font-family: "Plus Jakarta Sans";
-	src: url("/fonts/PlusJakartaSans/PlusJakartaSans-Regular.ttf") format("ttf");
+  font-family: 'Plus Jakarta Sans';
+  src: url('/fonts/PlusJakartaSans/PlusJakartaSans-Regular.ttf') format('ttf');
 }
 
 body {
-	font-family: "Plus Jakarta Sans", sans-serif;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
+.preStyle {
+  font-family: 'initial';
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 
 .login .ant-input,
 .login .ant-input-affix-wrapper > input.ant-input,
 .login .ant-input:placeholder-shown {
-	background-color: transparent !important;
-	color: white !important;
+  background-color: transparent !important;
+  color: white !important;
 }
 
 .login .ant-input::placeholder,
 .login .anticon svg {
-	color: white !important;
+  color: white !important;
 }
 
 .login .ant-input-affix-wrapper-focused {
-	border: 1px solid white !important;
-	box-shadow: 0 0 0 2px white !important;
+  border: 1px solid white !important;
+  box-shadow: 0 0 0 2px white !important;
 }
 
 .regis .ant-btn-primary {
-	box-shadow: 6px 8px 4px -3px rgba(0, 0, 0, 25%),
-		0 4px 6px -4px rgb(0, 0, 0, 25%);
+  box-shadow: 6px 8px 4px -3px rgba(0, 0, 0, 25%),
+    0 4px 6px -4px rgb(0, 0, 0, 25%);
 }
 
 .regis .ant-btn-default {
-	box-shadow: 6px 8px 4px -3px rgba(0, 0, 0, 25%),
-		0 4px 6px -4px rgb(0, 0, 0, 25%);
+  box-shadow: 6px 8px 4px -3px rgba(0, 0, 0, 25%),
+    0 4px 6px -4px rgb(0, 0, 0, 25%);
 }
 
 .login .ant-input-affix-wrapper:hover {
-	border: 1px solid white !important;
+  border: 1px solid white !important;
 }
 
 .login .ant-btn-primary {
-	box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 .login .ant-btn-primary:hover {
-	background-color: rgba(255, 255, 255, 0.2) !important;
-	border: 1px solid white !important;
-	color: white !important;
+  background-color: rgba(255, 255, 255, 0.2) !important;
+  border: 1px solid white !important;
+  color: white !important;
 }
 
 .ant-steps .ant-steps-item-wait .ant-steps-item-icon {
-	background-color: transparent !important;
-	border-width: 2px !important;
-	@apply border-primary;
+  background-color: transparent !important;
+  border-width: 2px !important;
+  @apply border-primary;
 }
 
 .ant-steps .ant-steps-item-wait .ant-steps-item-icon > .ant-steps-icon {
-	@apply text-teks;
-	font-weight: bold !important;
-	font-size: medium !important;
+  @apply text-teks;
+  font-weight: bold !important;
+  font-size: medium !important;
 }
 
 .ant-steps .ant-steps-item-process .ant-steps-item-icon > .ant-steps-icon {
-	font-weight: bold !important;
+  font-weight: bold !important;
 }
 
 .ant-steps .ant-steps-item-finish .ant-steps-item-icon {
-	background-color: #e6f4ff !important;
+  background-color: #e6f4ff !important;
 }
 
 .ant-input-group .ant-input {
-	padding: 9px !important;
-	border-radius: 10px;
-	font-size: 20px !important;
-	@apply border-rstroke;
+  padding: 9px !important;
+  border-radius: 10px;
+  font-size: 20px !important;
+  @apply border-rstroke;
 }
 
 .login .ant-input-affix-wrapper .anticon.ant-input-password-icon {
-	color: white !important;
+  color: white !important;
 }
 
 .ant-input-group .ant-input-group-addon {
-	padding-inline: 25px !important;
-	color: white !important;
-	border-start-start-radius: 10px !important;
-	background-color: #4065da !important;
-	font-size: large !important;
-	@apply border-rstroke;
+  padding-inline: 25px !important;
+  color: white !important;
+  border-start-start-radius: 10px !important;
+  background-color: #4065da !important;
+  font-size: large !important;
+  @apply border-rstroke;
 }
 .search .ant-input-group .ant-input-group-addon {
-    padding-inline: 25px !important;
-    color: white !important;
-    border-start-start-radius: 0px !important;
-    border-end-end-radius: 10px !important;
-    background-color: #4065DA !important;
-    font-size: large !important;
-    @apply border-rstroke
+  padding-inline: 25px !important;
+  color: white !important;
+  border-start-start-radius: 0px !important;
+  border-end-end-radius: 10px !important;
+  background-color: #4065da !important;
+  font-size: large !important;
+  @apply border-rstroke;
 }
 .search .ant-input-group .ant-input-group-addon {
-    padding-inline: 25px !important;
-    color: white !important;
-    border-start-start-radius: 0px !important;
-    border-end-end-radius: 10px !important;
-    background-color: #4065DA !important;
-    font-size: large !important;
-    @apply border-rstroke
+  padding-inline: 25px !important;
+  color: white !important;
+  border-start-start-radius: 0px !important;
+  border-end-end-radius: 10px !important;
+  background-color: #4065da !important;
+  font-size: large !important;
+  @apply border-rstroke;
 }
 
 .ant-picker {
-	@apply border-rstroke;
-	border-radius: 10px !important;
-	padding: 9px !important;
-	font-size: 20px !important;
+  @apply border-rstroke;
+  border-radius: 10px !important;
+  padding: 9px !important;
+  font-size: 20px !important;
 }
 .ant-picker .ant-picker-input > input:placeholder-shown,
 .ant-picker .ant-picker-input > input {
-	font-size: 20px !important;
+  font-size: 20px !important;
 }
 
 .regis .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-	@apply border-rstroke;
-	font-size: 20px;
+  @apply border-rstroke;
+  font-size: 20px;
 }
 .produkOwner .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-	border-width: 2px;
-	font-size: 20px;
-	color: white;
-	border: 2;
-	border-color: white;
+  border-width: 2px;
+  font-size: 20px;
+  color: white;
+  border: 2;
+  border-color: white;
 }
-.ant-select-focused:where(.css-dev-only-do-not-override-1dj4ii3).ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector{
-	border: 2;
-	border-color: white;
+.ant-select-focused:where(.css-dev-only-do-not-override-1dj4ii3).ant-select:not(
+    .ant-select-disabled
+  ):not(.ant-select-customize-input):not(.ant-pagination-size-changer)
+  .ant-select-selector {
+  border: 2;
+  border-color: white;
 }
 .regis
-	.ant-select-single:not(.ant-select-customize-input)
-	.ant-select-selector {
-	padding: 9px;
-	border-radius: 10px !important;
+  .ant-select-single:not(.ant-select-customize-input)
+  .ant-select-selector {
+  padding: 9px;
+  border-radius: 10px !important;
 }
 .produkOwner
-	.ant-select-single:not(.ant-select-customize-input)
-	.ant-select-selector {
-	padding: 9px;
-	border-radius: 10px !important;
-	background-color: transparent;
+  .ant-select-single:not(.ant-select-customize-input)
+  .ant-select-selector {
+  padding: 9px;
+  border-radius: 10px !important;
+  background-color: transparent;
 }
 .produkOwner .ant-select .ant-select-selection-item {
-	font-weight: bold;
-	margin-right: 10px;
-	display: flex;
-	justify-content: center;
+  font-weight: bold;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
 }
 .produkOwner .ant-select .ant-select-arrow {
-	height: 20px;
-	margin-top: -8px;
-	color: white;
-	font-size: 20px;
+  height: 20px;
+  margin-top: -8px;
+  color: white;
+  font-size: 20px;
 }
-.regis .ant-select-single, .home-produk .ant-select-single {
-	height: auto;
+.regis .ant-select-single,
+.home-produk .ant-select-single {
+  height: auto;
 }
 .produkOwner .ant-select-single {
-	height: max-content;
+  height: max-content;
 }
 .regis .ant-input:hover,
 .regis .ant-input:focus {
-	@apply border-primary;
+  @apply border-primary;
 }
 
 .regis .ant-btn-primary:hover {
-	background-color: #7291f5;
+  background-color: #7291f5;
 }
 .lihat-detail .ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover {
-	background-color: #4065da;
+  background-color: #4065da;
 }
 .modal-hapus .ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover {
-	background-color: #e24444;
+  background-color: #e24444;
 }
 
-.ant-tabs .ant-tabs-tab{
-    width: 216px;
-    justify-content: center;
-    border-radius: 20px;
+.ant-tabs .ant-tabs-tab {
+  width: 216px;
+  justify-content: center;
+  border-radius: 20px;
 }
 .ant-tabs-top > .ant-tabs-nav {
-	margin: 0;
+  margin: 0;
 }
 .ant-tabs .ant-tabs-tab + .ant-tabs-tab {
-	margin: 0;
-	width: 216px;
-	justify-content: center;
-	border-radius: 20px !important;
+  margin: 0;
+  width: 216px;
+  justify-content: center;
+  border-radius: 20px !important;
 }
 
 .ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab-active {
-	background-color: #4065da;
-	color: white !important;
-	border-radius: 20px;
+  background-color: #4065da;
+  color: white !important;
+  border-radius: 20px;
 }
 
 .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab {
-	border: none;
-	transition: none;
+  border: none;
+  transition: none;
 }
 
 :where(.css-dev-only-do-not-override-1dj4ii3).ant-tabs-top
-	> .ant-tabs-nav::before {
-	border: none;
+  > .ant-tabs-nav::before {
+  border: none;
 }
 
 :where(.css-dev-only-do-not-override-1dj4ii3).ant-upload-wrapper
-	.ant-upload-select {
-	width: -webkit-fill-available !important;
+  .ant-upload-select {
+  width: -webkit-fill-available !important;
 }
 .ant-modal-confirm .ant-modal-confirm-body {
-	display: block;
+  display: block;
 }
 
 .modal-hapus .anticon svg {
-	font-size: 60px;
-	color: #4065da;
+  font-size: 60px;
+  color: #4065da;
 }
 .modal-hapus :where(.css-dev-only-do-not-override-6j9yrn).ant-btn {
-	height: max-content;
+  height: max-content;
 }
 :where(.css-dev-only-do-not-override-6j9yrn).ant-btn {
-	padding: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: large;
-	background-color: #4065da;
-	font-weight: bold;
-	width: 50%;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: large;
+  background-color: #4065da;
+  font-weight: bold;
+  width: 50%;
 }
 .ant-modal-confirm .ant-modal-confirm-paragraph {
-	max-width: none;
+  max-width: none;
 }
 button,
-[type="button"] {
-	background-color: none;
+[type='button'] {
+  background-color: none;
 }
 :where(.css-dev-only-do-not-override-6j9yrn).ant-btn-default {
-	background-color: #dd1717;
-	width: 166px;
+  background-color: #dd1717;
+  width: 166px;
 }
 :where(.css-dev-only-do-not-override-6j9yrn).ant-modal-confirm
-	.ant-modal-confirm-btns
-	.ant-btn
-	+ .ant-btn {
-	background-color: #4065da;
-	width: 166px;
+  .ant-modal-confirm-btns
+  .ant-btn
+  + .ant-btn {
+  background-color: #4065da;
+  width: 166px;
 }
 :where(.css-dev-only-do-not-override-6j9yrn).ant-btn-default:not(:disabled):not(
-		.ant-btn-disabled
-	):hover {
-	color: white;
-	border-color: white;
+    .ant-btn-disabled
+  ):hover {
+  color: white;
+  border-color: white;
 }
 .modal-hapus
-	:where(.css-dev-only-do-not-override-6j9yrn).ant-modal-confirm
-	.ant-modal-confirm-btns {
-	margin-top: 40px;
-	display: flex;
-	justify-content: space-between;
+  :where(.css-dev-only-do-not-override-6j9yrn).ant-modal-confirm
+  .ant-modal-confirm-btns {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
 }
 .ant-pagination .ant-pagination-next .ant-pagination-item-link,
 .ant-pagination .ant-pagination-disabled .ant-pagination-item-link {
-	font-size: 20px;
+  font-size: 20px;
 }
 .ant-pagination .ant-pagination-prev .ant-pagination-item-link {
-	font-size: 20px;
+  font-size: 20px;
 }
 .ant-layout {
-	background-color: white;
+  background-color: white;
 }
 
 .produkOwner
-	.ant-select-single
-	.ant-select-selector
-	.ant-select-selection-placeholder {
-	color: white;
+  .ant-select-single
+  .ant-select-selector
+  .ant-select-selection-placeholder {
+  color: white;
 }
 
 .ant-upload-wrapper.ant-upload-picture-card-wrapper
-	.ant-upload-list.ant-upload-list-picture-card
-	.ant-upload-list-item-container {
-	width: 105px;
+  .ant-upload-list.ant-upload-list-picture-card
+  .ant-upload-list-item-container {
+  width: 105px;
 }
 .create-produk .ant-input-affix-wrapper,
 .textarea-produk .ant-input-affix-wrapper,
 .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-	border-radius: 10px;
-	@apply border-rstroke;
+  border-radius: 10px;
+  @apply border-rstroke;
 }
-.search .ant-input-affix-wrapper{
-    border-radius: 10px;
-    @apply border-rstroke;
-    box-shadow: inset 4px 4px 4px 0 rgba(0, 0, 0, 0.137);
+.search .ant-input-affix-wrapper {
+  border-radius: 10px;
+  @apply border-rstroke;
+  box-shadow: inset 4px 4px 4px 0 rgba(0, 0, 0, 0.137);
 }
-textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input{
-    border-radius: 10px;
+textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input {
+  border-radius: 10px;
 }
 .ant-input-number-sm .ant-input-number-handler-wrap {
-	border-start-end-radius: 10px;
-	border-end-end-radius: 10px;
+  border-start-end-radius: 10px;
+  border-end-end-radius: 10px;
 }
 .ant-input-textarea-show-count .ant-input-data-count {
-	bottom: -26px;
+  bottom: -26px;
 }
 .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
-	padding: 10px;
-	height: max-content;
+  padding: 10px;
+  height: max-content;
 }
 .produkOwner
-	.ant-select-single:not(.ant-select-customize-input)
-	.ant-select-selector {
-	padding: 10px;
-	height: -webkit-fill-available;
+  .ant-select-single:not(.ant-select-customize-input)
+  .ant-select-selector {
+  padding: 10px;
+  height: -webkit-fill-available;
 }
 .create-produk .ant-select .ant-select-arrow,
 .textarea-produk .ant-select .ant-select-arrow {
-	height: 100%;
+  height: 100%;
 }
 .ant-select-single .ant-select-selector {
-	font-size: 20px;
+  font-size: 20px;
 }
 .home-produk .ant-select-single .ant-select-selector {
-	font-size: 36px;
+  font-size: 36px;
 }
 .ant-input-number-affix-wrapper input.ant-input-number-input {
-	padding: 0px;
-	font-size: 20px;
+  padding: 0px;
+  font-size: 20px;
 }
 
 .list-produk .ant-form-item {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .create-produk .ant-form-item .ant-form-item-explain-error {
-	margin-top: 10px;
+  margin-top: 10px;
 }
 .ant-input-number-sm input.ant-input-number-input {
-	height: max-content;
+  height: max-content;
 }
 .ant-input-number .ant-input-number-input {
-	border-radius: 0;
+  border-radius: 0;
 }
 .modal-berhasil :where(.css-dev-only-do-not-override-6j9yrn).ant-btn {
-	background-color: #4065da;
+  background-color: #4065da;
 }
 :where(.css-dev-only-do-not-override-6j9yrn).ant-modal-confirm
-	.ant-modal-confirm-btns {
-	margin-top: 20px;
-	display: flex;
-	justify-content: center;
+  .ant-modal-confirm-btns {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
 }
-:where(.css-dev-only-do-not-override-1dj4ii3).ant-layout-header{
-    padding: 0px;
+:where(.css-dev-only-do-not-override-1dj4ii3).ant-layout-header {
+  padding: 0px;
 }
 
-:where(.css-dev-only-do-not-override-1dj4ii3).ant-btn >span{
-    font-weight: bold;
-    font-size: larger;
+:where(.css-dev-only-do-not-override-1dj4ii3).ant-btn > span {
+  font-weight: bold;
+  font-size: larger;
 }
-.search .anticon svg{
-    font-size: 30px;
+.search .anticon svg {
+  font-size: 30px;
 }
-:where(.css-dev-only-do-not-override-1dj4ii3).ant-radio-button-wrapper{
-	background: #ffffff;
-    border: 1px solid #ffffff;
+:where(.css-dev-only-do-not-override-1dj4ii3).ant-radio-button-wrapper {
+  background: #ffffff;
+  border: 1px solid #ffffff;
 }
 .ant-radio-button-wrapper:first-child {
-	border-inline-start: 0px
+  border-inline-start: 0px;
 }
-:where(.css-dev-only-do-not-override-1dj4ii3).ant-radio-button-wrapper:first-child:last-child {
-    box-shadow: 0 1px 8px rgba(36,36,36,.14);
+:where(
+    .css-dev-only-do-not-override-1dj4ii3
+  ).ant-radio-button-wrapper:first-child:last-child {
+  box-shadow: 0 1px 8px rgba(36, 36, 36, 0.14);
 }
-.home-produk :where(.css-dev-only-do-not-override-1dj4ii3).ant-select .ant-select-selection-placeholder{
-	color: #4065DA;
+.home-produk
+  :where(.css-dev-only-do-not-override-1dj4ii3).ant-select
+  .ant-select-selection-placeholder {
+  color: #4065da;
 }
-.home-produk .ant-select .ant-select-arrow{
-	height: 25px;
-	font-size: 36px;
-	color: #4065DA;
+.home-produk .ant-select .ant-select-arrow {
+  height: 25px;
+  font-size: 36px;
+  color: #4065da;
 }
-.home-produk .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder, .home-produk .ant-select-single.ant-select-show-arrow .ant-select-selection-item{
-	padding-inline-end: 48px;
+.home-produk
+  .ant-select-single.ant-select-show-arrow
+  .ant-select-selection-placeholder,
+.home-produk
+  .ant-select-single.ant-select-show-arrow
+  .ant-select-selection-item {
+  padding-inline-end: 48px;
 }
-.home-produk :where(.css-dev-only-do-not-override-1dj4ii3).ant-select .ant-select-selection-item{
-	font-weight: bold;
-	color: #4065DA;
+.home-produk
+  :where(.css-dev-only-do-not-override-1dj4ii3).ant-select
+  .ant-select-selection-item {
+  font-weight: bold;
+  color: #4065da;
 }
-.home-produk .ant-select-single .ant-select-selector .ant-select-selection-item, .home-produk .ant-select-single .ant-select-selector .ant-select-selection-placeholder{
-	line-height: normal;
+.home-produk .ant-select-single .ant-select-selector .ant-select-selection-item,
+.home-produk
+  .ant-select-single
+  .ant-select-selector
+  .ant-select-selection-placeholder {
+  line-height: normal;
 }
-.ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload.ant-upload-select{
-	height: 120px;
-	margin-inline-end: 0px;
-    margin-bottom: 0px;
+.ant-upload-wrapper.ant-upload-picture-card-wrapper
+  .ant-upload.ant-upload-select {
+  height: 120px;
+  margin-inline-end: 0px;
+  margin-bottom: 0px;
 }
