--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@ body {
 }
 
 .preStyle {
-  font-family: 'initial';
+  font-family: 'Plus Jakarta Sans', sans-serif;
   white-space: pre-wrap;
   word-break: break-word;
 }
