--- a/app/globals.css
+++ b/app/globals.css
@@ -357,6 +357,9 @@ textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input {
   padding: 10px;
   height: max-content;
 }
+.home-produk .ant-select-single:not(.ant-select-customize-input) .ant-select-selector{
+  width:  max-content;
+}
 .produkOwner
   .ant-select-single:not(.ant-select-customize-input)
   .ant-select-selector {
