benerin style yg cacat

--- a/app/globals.css
+++ b/app/globals.css
@@ -230,12 +230,23 @@ body {
 :where(.css-dev-only-do-not-override-gzal6t).ant-btn-primary{
   height: max-content;
 }
-.modal-hapus button, [type='button']{
+:where(.css-dev-only-do-not-override-gzal6t).ant-btn-default{
   background-color: #dd1717;
   width: 40%;
+  border-color: white;
+  padding-block: 7px;
   height: max-content;
 }
-
+:where(.css-dev-only-do-not-override-gzal6t).ant-btn-primary{
+  width: 40%;
+  border-color: white;
+  padding-block: 7px;
+  height: max-content;
+}
+.ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
+  border-color: white;
+  opacity: 80%;
+}
 .ant-tabs .ant-tabs-tab {
   width: 216px;
   justify-content: center;
@@ -514,6 +525,9 @@ textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input {
 }
 :where(.css-dev-only-do-not-override-gzal6t).ant-input:placeholder-shown{
   font-weight: normal;
+}
+:where(.css-dev-only-do-not-override-gzal6t).ant-input{
+  border-color: #646464;
 }
 .ant-modal .ant-modal-content{
   width: 500px;
