--- a/app/globals.css
+++ b/app/globals.css
@@ -546,3 +546,19 @@ textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input {
 .ant-tabs-top >.ant-tabs-nav::before{
   border-bottom: 1px solid #ffffff00;
 }
+:where(.css-dev-only-do-not-override-19l9cjq).ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload.ant-upload-select >.ant-upload{
+  width: auto;
+}
+:where(.css-dev-only-do-not-override-19l9cjq).ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload.ant-upload-select{
+  width: -webkit-fill-available
+}
+:where(.css-dev-only-do-not-override-19l9cjq).ant-input{
+  border-radius: 10px;
+}
+.ant-select-focused:where(.css-dev-only-do-not-override-19l9cjq).ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector{
+  border-color: white;
+}
+.ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload-list.ant-upload-list-picture-card .ant-upload-list-item-container{
+  width: 140px;
+  margin-inline: 0 14px;
+}
