--- a/app/globals.css
+++ b/app/globals.css
@@ -184,6 +184,7 @@ body {
 .produkOwner
   .ant-select-single:not(.ant-select-customize-input)
   .ant-select-selector {
+  width: 150px;
   padding: 9px;
   border-radius: 10px !important;
   background-color: transparent;
@@ -550,7 +551,7 @@ textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input {
   width: auto;
 }
 :where(.css-dev-only-do-not-override-19l9cjq).ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload.ant-upload-select{
-  width: -webkit-fill-available
+  width: -webkit-fill-available !important;
 }
 :where(.css-dev-only-do-not-override-19l9cjq).ant-input{
   border-radius: 10px;
