--- a/app/globals.css
+++ b/app/globals.css
@@ -563,3 +563,21 @@ textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input {
   width: 140px;
   margin-inline: 0 14px;
 }
+.transaksi .ant-select-single.ant-select-show-arrow .ant-select-selection-item{
+  display: flex;
+  justify-content: center;
+}
+.transaksi .ant-select .ant-select-arrow {
+  color: rgb(0 0 0 / 75%);
+  font-size: 20px;
+  height: 32px;
+}
+.transaksi .ant-select-focused:where(.css-dev-only-do-not-override-19l9cjq).ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector{
+  border-color: #4065DA;
+}
+.review .ant-modal .ant-modal-content{
+  display: block;
+}
+.ant-modal-content{
+  width: 100% !important;
+}
