--- a/app/globals.css
+++ b/app/globals.css
@@ -410,6 +410,10 @@ textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input {
 .list-produk .ant-form-item {
   margin-bottom: 0;
 }
+.list-produk .ant-select-single .ant-select-selector .ant-select-selection-item{
+  display: flex;
+  justify-content: center;
+}
 
 .create-produk .ant-form-item .ant-form-item-explain-error {
   margin-top: 10px;
@@ -556,8 +560,8 @@ textarea:where(.css-dev-only-do-not-override-1dj4ii3).ant-input {
 :where(.css-dev-only-do-not-override-19l9cjq).ant-input{
   border-radius: 10px;
 }
-.ant-select-focused:where(.css-dev-only-do-not-override-19l9cjq).ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector{
-  border-color: white;
+.list-produk .ant-select-focused:where(.css-dev-only-do-not-override-19l9cjq).ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector{
+  border-color: #4065DA;
 }
 .ant-upload-wrapper.ant-upload-picture-card-wrapper .ant-upload-list.ant-upload-list-picture-card .ant-upload-list-item-container{
   width: 140px;
